/* Copyright 2020 Energinet DataHub A/S
 *
 * Licensed under the Apache License, Version 2.0 (the "License2");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Energinet.DataHub.EnergySupplying.RequestResponse.Requests";

message CustomerMasterDataResponse {
  CustomerMasterData master_data = 1;
  Error master_data_error = 2;
}

message CustomerMasterData {
  string customer_name = 1;
  string registered_by_process_id = 2;
  string customer_id = 3;
  google.protobuf.Timestamp electrical_heating_effective_date = 4;
}

message Error {
  string error = 1;
}